--- a/TodoAppML/View/PendingCell.xib
+++ b/TodoAppML/View/PendingCell.xib
@@ -1,15 +1,53 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-        </view>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PendingCell" rowHeight="75" id="SyK-bn-ioW" customClass="MLPendingTableViewCell" customModule="TodoAppML" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="443" height="75"/>
+            <autoresizingMask key="autoresizingMask"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SyK-bn-ioW" id="bWc-3t-GTu">
+                <rect key="frame" x="0.0" y="0.0" width="443" height="74.5"/>
+                <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="imc-sk-VO0">
+                        <rect key="frame" x="28" y="27" width="40" height="21"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sRS-sR-Ped">
+                        <rect key="frame" x="132.5" y="7.5" width="177" height="59.5"/>
+                        <color key="backgroundColor" red="1" green="0.17963184760505968" blue="0.25438569202080674" alpha="1" colorSpace="calibratedRGB"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="15"/>
+                        <state key="normal" title="Cancel">
+                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                        <connections>
+                            <action selector="didTapCancelButton:" destination="SyK-bn-ioW" eventType="touchUpInside" id="ZHX-tK-5FW"/>
+                        </connections>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="imc-sk-VO0" firstAttribute="leading" secondItem="bWc-3t-GTu" secondAttribute="leadingMargin" constant="20" id="1Cp-fN-aZO"/>
+                    <constraint firstItem="sRS-sR-Ped" firstAttribute="centerX" secondItem="bWc-3t-GTu" secondAttribute="centerX" id="6PM-cg-SlU"/>
+                    <constraint firstItem="sRS-sR-Ped" firstAttribute="height" secondItem="bWc-3t-GTu" secondAttribute="height" multiplier="0.8" id="GCc-mB-aAm"/>
+                    <constraint firstItem="imc-sk-VO0" firstAttribute="centerY" secondItem="bWc-3t-GTu" secondAttribute="centerY" id="qgL-A4-ibX"/>
+                    <constraint firstItem="sRS-sR-Ped" firstAttribute="width" secondItem="bWc-3t-GTu" secondAttribute="width" multiplier="0.4" id="rNE-Mt-NT8"/>
+                    <constraint firstItem="sRS-sR-Ped" firstAttribute="centerY" secondItem="bWc-3t-GTu" secondAttribute="centerY" id="uzz-2D-1Kc"/>
+                </constraints>
+            </tableViewCellContentView>
+            <connections>
+                <outlet property="cancelButton" destination="sRS-sR-Ped" id="QYd-PJ-GxL"/>
+                <outlet property="taskLabel" destination="imc-sk-VO0" id="jYG-8p-tEJ"/>
+            </connections>
+            <point key="canvasLocation" x="159.5" y="37.5"/>
+        </tableViewCell>
     </objects>
 </document>
