--- a/TodoAppML/Base.lproj/Main.storyboard
+++ b/TodoAppML/Base.lproj/Main.storyboard
@@ -71,14 +71,16 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9QW-j9-onS">
                                 <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                 <items>
-                                    <navigationItem title="Pending" id="H3j-1r-Mnc"/>
+                                    <navigationItem title="Pending" id="H3j-1r-Mnc">
+                                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Jdx-On-dHA"/>
+                                    </navigationItem>
                                 </items>
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="tDY-Sm-zF3">
                                 <rect key="frame" x="0.0" y="72" width="600" height="479"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="ENI-Ld-7mP">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PendingCell" id="ENI-Ld-7mP">
                                         <rect key="frame" x="0.0" y="28" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ENI-Ld-7mP" id="s9z-hd-dhO">
@@ -87,6 +89,10 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="UL9-Vf-rG5" id="TDw-a4-aLZ"/>
+                                    <outlet property="delegate" destination="UL9-Vf-rG5" id="isi-qV-sF6"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -101,6 +107,9 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item 1" id="ZFC-Ex-QTF"/>
+                    <connections>
+                        <outlet property="tableView" destination="tDY-Sm-zF3" id="rRc-jW-ogi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9j3-CA-z0R" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
